deploy: haohaotw/HaoBlog@812861d2e4effaa88587812c243086af495aac21

--- a/404.html
+++ b/404.html
@@ -40,6 +40,16 @@
 </span>
 </div>
 <ul id=menu>
+<li>
+<a href=https://blog.haohere.com/categories/ title=分類>
+<span>分類</span>
+</a>
+</li>
+<li>
+<a href=https://blog.haohere.com/tags/ title=標籤>
+<span>標籤</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
