--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 </span>
 </div>
 <ul id=menu>
+<li>
+<a href=https://blog.haohere.com/categories/ title=分類>
+<span>分類</span>
+</a>
+</li>
+<li>
+<a href=https://blog.haohere.com/tags/ title=標籤>
+<span>標籤</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
@@ -51,10 +61,10 @@
 </h2>
 </header>
 <section class=entry-content>
-<p>Hello 文章測試 - test s</p>
+<p>Hello 文章測試</p>
 </section>
-<footer class=entry-footer><span title="2021-12-26 13:40:38 +0800 +0800">December 26, 2021</span></footer>
-<a class=entry-link aria-label="post link to Hello World" href=https://blog.haohere.com/posts/hello-world/></a>
+<footer class=entry-footer><span title="2021-12-26 15:34:16 +0800 +0800">December 26, 2021</span></footer>
+<a class=entry-link aria-label="post link to Hello World" href=https://blog.haohere.com/2021/12/hello-world/></a>
 </article>
 </main>
 <footer class=footer>
